fix: remove scrollbars and smooth-behaviour

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -5,8 +5,13 @@
 @tailwind utilities;
 
 @layer base {
+    head,
+    ::-webkit-scrollbar {
+        @apply hidden;
+    }
+
     html {
-        @apply font-['Ubuntu'] scroll-smooth;
+        @apply font-['Ubuntu'];
     }
 
     head,
